# smart_home_hub

./: CMakeLists.txt  package.xml
hub/: GUI.py
nodes/: SmartHomeHubRunner
scripts/: GUI.py  SmartHomeHubController.py  SmartHomeHubNodeInterface.py
