<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="1">
	<name>hub</name>
	<version>0.0.1</version>
	<description>The control center for my smart home.</description>

	<maintainer email="rnvandemark@gmail.com">Nick Vandemark</maintainer>
	<license>Do_Whatever_You_Want</license>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>rospy</run_depend>
	<build_depend>rospy</build_depend>
	<run_depend>smart_home_msgs</run_depend>
	<build_depend>smart_home_msgs</build_depend>
</package>
